--- a/conf/application.conf
+++ b/conf/application.conf
@@ -1,30 +1,26 @@
+include "secure"
 
-play {
-  crypto.secret = "changeme"
+# Settings specific to the REST API.
+restapi {
+  postAction.maxAge = 5 minutes
 
-  editor="http://localhost:63342/api/file/?file=%s&line=%s"
-
-  http {
-    cookies.strict = true
-    session.secure = true
-    flash.secure = true
-
-    forwarded.trustedProxies = ["::1", "127.0.0.1"]
-  }
-
-  filters {
-    csrf {
-      cookie.secure = true
-    }
-
-    hosts {
-      allowed = ["localhost:9443", "localhost:9000"]
+  postRepository {
+    dispatcher {
+      executor = "thread-pool-executor"
+      throughput = 1
+      thread-pool-executor {
+        fixed-pool-size = 2  // sized to post repository db conn pool
+      }
     }
   }
-}
 
-restapi.filters.hsts {
-  maxAge = 5 seconds
-  secureHost = "localhost"
-  securePort = 9443
+  commentRepository {
+    dispatcher {
+      executor = "thread-pool-executor"
+      throughput = 1
+      thread-pool-executor {
+        fixed-pool-size = 5 // sized to comment repository db conn pool
+      }
+    }
+  }
 }
