Add a timeout feature

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -3,6 +3,7 @@ include "secure"
 # Settings specific to the REST API.
 restapi {
   postAction.maxAge = 5 minutes
+  postAction.timeout = 1 second
 
   postRepository {
     dispatcher {
