Misc timeout and fixes

--- a/conf/secure.conf
+++ b/conf/secure.conf
@@ -30,7 +30,7 @@ play {
     }
 
     hsts {
-      maxAge = 5 minutes
+      maxAge = 365d
       secureHost = "localhost"
       securePort = 9443
     }
