clean out configuration

--- a/conf/secure.conf
+++ b/conf/secure.conf
@@ -30,7 +30,7 @@ play {
     }
 
     hsts {
-      maxAge = 365d
+      maxAge = 1 minute # don't interfere with other projects
       secureHost = "localhost"
       securePort = 9443
     }
