--- a/conf/secure.conf
+++ b/conf/secure.conf
@@ -1,6 +1,8 @@
 # Set up Play for HTTPS and locked down allowed hosts.
 # Nothing in here is required for REST, but it's a good default.
 play {
+  crypto.secret = "changeme"
+
   http {
     cookies.strict = true
 
