--- a/build.gradle
+++ b/build.gradle
@@ -7,6 +7,7 @@ plugins {
 def playVersion = "2.6.20"
 def scalaVersion = System.getProperty("scala.binary.version", /* default = */ "2.12")
 def gatlingVersion = "2.3.0"
+def elastic4sVersion = "6.4.0"
 
 model {
     components {
@@ -46,6 +47,10 @@ dependencies {
     play "com.netaporter:scala-uri_$scalaVersion:0.4.16"
     play "net.codingwell:scala-guice_$scalaVersion:4.2.1"
 
+    play "com.sksamuel.elastic4s:elastic4s-core:$elastic4sVersion"
+    play "com.sksamuel.elastic4s:elastic4s-http:$elastic4sVersion"
+    play "com.sksamuel.elastic4s:elastic4s-embedded:$elastic4sVersion"
+    
     playTest "org.scalatestplus.play:scalatestplus-play_$scalaVersion:3.1.2"
     playTest "io.gatling.highcharts:gatling-charts-highcharts:$gatlingVersion"
     playTest "io.gatling:gatling-test-framework:$gatlingVersion"
